@@ -3,6 +3,8 @@ Version: 0.12.2
 Date: 16. 07. 2021
   Changed:
     - Balancing - Fixed fuel value of Wooden barricade being too overpowered
+  Bugfixes:
+    - Fixed lamp signal colours not working for science packs
   Locales:
     - Updated Italian translation (thanks to diego.crosera and andrea.gomarasca)
     - Updated Polish translation (thanks to no_desired_username)
